--- a/client/src/components/ListingEditOptions/ItemEditOptions.css
+++ b/client/src/components/ListingEditOptions/ItemEditOptions.css
@@ -90,3 +90,11 @@
     transition: box-shadow 0.5s;
 }
 
+.title-head{
+    margin-left: -15px;
+    margin-bottom: 100px;
+}
+.description-para{
+    font-size: 12px;
+    color: grey;
+}
